--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <version.asciidoctor>1.5.5</version.asciidoctor>
     </properties>
 
     <dependencies>
@@ -77,6 +78,33 @@
                         <include>S05_FlatMap.java</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>${version.asciidoctor}</version>
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <sourceHighlighter>coderay</sourceHighlighter>
+                            <backend>html</backend>
+                            <doctype>book</doctype>
+                            <attributes>
+                                <sourceDir>${project.basedir}/src</sourceDir>
+                                <!-- Display anchors on html document-->
+                                <sectanchors>true</sectanchors>
+                                <toclevels>3</toclevels>
+                                <!-- Parse link attributes such as window="_blank" -->
+                                <linkattrs>true</linkattrs>
+                            </attributes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <!--
             <plugin>
