--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
 
         <!-- Testing -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -67,15 +67,18 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <includes>
                         <include>S01_Introduction.java</include>
                         <include>S02_Excel_API.java</include>
-                        <include>S03_Numeric_Range.java</include>
+                        <include>S03_Numeric_Range_V0.java</include>
+                        <include>S03_Numeric_Range_V1.java</include>
+                        <include>S03_Numeric_Range_V2.java</include>
                         <include>S04_Parsing_API.java</include>
-                        <include>S05_FlatMap.java</include>
+                        <include>S05_FlatMap_On_Parser.java</include>
                     </includes>
                 </configuration>
             </plugin>
